layout sx completato (Bug overflow da fixare)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -89,8 +89,11 @@
     overflow: hidden;
 }
 .my_style_contacts ul{
+    height: 100%;
     padding: 0;
     margin: 0;
+    border-right: 1px solid #e7e9e8;
+    background-color: white;
 }
 .my_style_contacts ul li h5{
     margin: 0;
@@ -98,8 +101,7 @@
 .box_contacts{
     list-style: none;
     display: flex;
-    border: 1px solid #e7e9e8;
-    background-color: white;
+    border-top: 1px solid #e7e9e8;
     padding: 5px;
     padding-left: 15px;
 }
